# declare-schema

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  db_init.sh  declare-schema.toml  flake.nix
.github/workflows/: pull_request.yml  push_main.yml
.sqlx/: query-02134259aaaac6d5a5288c1acb056894270fad439a4f80d800b20f34cfe4800c.json  query-55cd8015872791240d7c4073889d46ed4137ca36af039565bf6b53cca6608aa4.json  query-6347ea910a34caf1f555efe54f3e4633c083f85b06b7555c645b022f05e18dab.json  query-b4499922596a53f51c2155411334b7f3a358a3416d6c555d6e466cd40431e675.json  query-cdeaaff0b9f3c13c9313256739cb08a07b5d28d7cd09c7306da7c9f9efa1067d.json  query-d1bf75a92a202716bdee674a88363f1ec94d4de1b2744db9e1113cda1a9d9d9b.json  query-efc5112624b6bc5752e120d37e5a1b35bc53603877c3b616f7019dd3039cb568.json  query-fd76c90c3e604ac907247b7fb6d1561cbf7f9437e9de11a062e3bcf67aef4740.json
examples/example_cli/: main.rs
schema/: from.sql  schema.sql
src/: altertable.rs  lib.rs  schema.rs  source_postgres.rs  sqlparser_helpers.rs
src/declared_types/: index.rs  table.rs
